--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -34,6 +35,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "@tabler/icons-react": "^3.9.0",
     "@uploadthing/react": "^6.7.2",
+    "amadeus": "^11.0.0",
     "bcryptjs": "^2.4.3",
     "better-auth": "^1.1.14",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +47,7 @@
     "jose": "^5.6.3",
     "libphonenumber-js": "^1.11.4",
     "lucide-react": "^0.400.0",
+    "motion": "^12.0.6",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "react": "^18",
@@ -53,6 +56,8 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
     "resend": "^4.1.1",
     "sonner": "^1.5.0",
     "tailwind-clip-path": "^1.0.0",
